@startuml
left to right direction
package "taskt.Core.Automation.Commands"{
class "UIAutomationGetSelectionItemsValueFromUIElementCommand" <<sealed>> {
+RunCommand() : void 
+v_Result : String <<get>> <<set>> 
+v_ExpandWhenItemsNotFound : String <<get>> <<set>> 
+v_WaitTimeAfterExpand : String <<get>> <<set>> 
}
}

package "taskt.Core.Automation.Commands.UIAutomationGroup"{
abstract class "AGetFromUIElementCommands"{
+v_WhenValueCanNotRetrieved : String <<get>> <<set>> 
}
}

package "taskt.Core.Automation.Commands.UIAutomationGroup"{
Interface "IUIElementSelectionItemsProperties" {
+{abstract} v_ExpandWhenItemsNotFound : String <<get>> <<set>> <<abstract>> 
+{abstract} v_WaitTimeAfterExpand : String <<get>> <<set>> <<abstract>> 
}
}

package "taskt.Core.Automation.Commands"{
Interface "IListResultProperties" {
}
}

package "taskt.Core.Automation.Commands.UIAutomationGroup"{
abstract class "ADoSomethingUIElementCommands"{
+v_WindowNameResult : String <<get>> <<set>> 
+v_WindowHandleResult : String <<get>> <<set>> 
}
}

package "taskt.Core.Automation.Commands.UIAutomationGroup"{
Interface "IGetFromUIElementProperties" {
+{abstract} v_WhenValueCanNotRetrieved : String <<get>> <<set>> <<abstract>> 
}
}

package "taskt.Core.Automation.Commands.UIAutomationGroup"{
Interface "IDoSomethingUIElementProperties" {
}
}

package "taskt.Core.Automation.Commands"{
Interface "IResultProperties" {
+{abstract} v_Result : String <<get>> <<set>> <<abstract>> 
}
}

package "taskt.Core.Automation.Commands"{
Interface "ICanHandleList" {
}
}

package "taskt.Core.Automation.Commands.UIAutomationGroup"{
abstract class "AUIElementCoreCommands"{
+v_TargetElement : String <<get>> <<set>> 
}
}

package "taskt.Core.Automation.Commands.UIAutomationGroup"{
Interface "IUIElementCoreProperties" {
+{abstract} v_TargetElement : String <<get>> <<set>> <<abstract>> 
}
}

package "taskt.Core.Automation.Commands.UIAutomationGroup"{
Interface "IUIElementWindowResultsFromUIElementProperties" {
}
}

package "taskt.Core.Automation.Commands"{
Interface "IExpandableProperties" {
}
}

package "taskt.Core.Automation.Commands"{
abstract class "ScriptCommand"{
+RunCommand() : void 
+RunCommand() : void 
+GetDisplayValue() : String
+Render() : List
+Render() : List
+AfterShown() : void 
+Refresh() : void 
+BeforeValidate() : void 
+IsValidate() : Boolean
+ConvertToIntermediate() : void 
+ConvertToIntermediate() : void 
+ConvertToRaw() : void 
+ConvertToRaw() : void 
+Clone() : ScriptCommand
+CheckMatched() : Boolean
+Replace() : Boolean
+AddInstance() : void 
+RemoveInstance() : void 
+CommandID : String <<get>> <<set>> 
+CommandName : String <<get>> <<set>> 
+IsCommented : Boolean <<get>> <<set>> 
+SelectionName : String <<get>> <<set>> 
+DefaultPause : Int32 <<get>> <<set>> 
+LineNumber : Int32 <<get>> <<set>> 
+PauseBeforeExeucution : Boolean <<get>> <<set>> 
+DisplayForeColor : Color <<get>> <<set>> 
+v_Comment : String <<get>> <<set>> 
+CommandEnabled : Boolean <<get>> <<set>> 
+IsValid : Boolean <<get>> <<protected set>>
+IsWarning : Boolean <<get>> <<protected set>>
+validationResult : String <<get>> <<protected set>>
+IsMatched : Boolean <<get>> <<protected set>>
+IsDontSavedCommand : Boolean <<get>> <<set>> 
+IsNewInsertedCommand : Boolean <<get>> <<set>> 
+CustomRendering : Boolean <<get>> <<set>> 
+ControlsList : Dictionary <<get>> 
+RenderedControls : List<System.Windows.Forms.Control>
#_ControlsList : Dictionary<string, System.Windows.Forms.Control>
}
}

package "taskt.Core.Automation.Commands.UIAutomationGroup"{
Interface "ICanHandleUIElement" {
}
}

package "taskt.Core.Automation.Commands.WindowGroup"{
Interface "IFromWindowNameResultsProperties" {
+{abstract} v_WindowHandleResult : String <<get>> <<set>> <<abstract>> 
}
}

package "taskt.Core.Automation.Commands"{
Interface "IUIParameterProperties" {
+{abstract} ControlsList : Dictionary <<get>> <<abstract>> 
}
}

package "taskt.Core.Automation.Commands"{
Interface "ICommandIDProperties" {
+{abstract} CommandID : String <<get>> <<set>> <<abstract>> 
}
}

package "taskt.Core.Automation.Commands.WindowGroup"{
Interface "IFromWindowHandleResultsProperties" {
+{abstract} v_WindowNameResult : String <<get>> <<set>> <<abstract>> 
}
}

taskt.Core.Automation.Commands.UIAutomationGetSelectionItemsValueFromUIElementCommand --|> taskt.Core.Automation.Commands.UIAutomationGroup.AGetFromUIElementCommands
taskt.Core.Automation.Commands.UIAutomationGetSelectionItemsValueFromUIElementCommand ..|> taskt.Core.Automation.Commands.UIAutomationGroup.IUIElementSelectionItemsProperties
taskt.Core.Automation.Commands.UIAutomationGetSelectionItemsValueFromUIElementCommand ..|> taskt.Core.Automation.Commands.IListResultProperties
taskt.Core.Automation.Commands.UIAutomationGroup.AGetFromUIElementCommands --|> taskt.Core.Automation.Commands.UIAutomationGroup.ADoSomethingUIElementCommands
taskt.Core.Automation.Commands.UIAutomationGroup.AGetFromUIElementCommands ..|> taskt.Core.Automation.Commands.UIAutomationGroup.IGetFromUIElementProperties
taskt.Core.Automation.Commands.UIAutomationGroup.IUIElementSelectionItemsProperties --|> taskt.Core.Automation.Commands.UIAutomationGroup.IDoSomethingUIElementProperties
taskt.Core.Automation.Commands.IListResultProperties --|> taskt.Core.Automation.Commands.IResultProperties
taskt.Core.Automation.Commands.IListResultProperties --|> taskt.Core.Automation.Commands.ICanHandleList
taskt.Core.Automation.Commands.UIAutomationGroup.ADoSomethingUIElementCommands --|> taskt.Core.Automation.Commands.UIAutomationGroup.AUIElementCoreCommands
taskt.Core.Automation.Commands.UIAutomationGroup.ADoSomethingUIElementCommands ..|> taskt.Core.Automation.Commands.UIAutomationGroup.IDoSomethingUIElementProperties
taskt.Core.Automation.Commands.UIAutomationGroup.IGetFromUIElementProperties --|> taskt.Core.Automation.Commands.UIAutomationGroup.IDoSomethingUIElementProperties
taskt.Core.Automation.Commands.UIAutomationGroup.IDoSomethingUIElementProperties --|> taskt.Core.Automation.Commands.UIAutomationGroup.IUIElementCoreProperties
taskt.Core.Automation.Commands.UIAutomationGroup.IDoSomethingUIElementProperties --|> taskt.Core.Automation.Commands.UIAutomationGroup.IUIElementWindowResultsFromUIElementProperties
taskt.Core.Automation.Commands.ICanHandleList --|> taskt.Core.Automation.Commands.IExpandableProperties
taskt.Core.Automation.Commands.UIAutomationGroup.AUIElementCoreCommands --|> taskt.Core.Automation.Commands.ScriptCommand
taskt.Core.Automation.Commands.UIAutomationGroup.AUIElementCoreCommands ..|> taskt.Core.Automation.Commands.UIAutomationGroup.IUIElementCoreProperties
taskt.Core.Automation.Commands.UIAutomationGroup.IUIElementCoreProperties --|> taskt.Core.Automation.Commands.UIAutomationGroup.ICanHandleUIElement
taskt.Core.Automation.Commands.UIAutomationGroup.IUIElementCoreProperties --|> taskt.Core.Automation.Commands.IExpandableProperties
taskt.Core.Automation.Commands.UIAutomationGroup.IUIElementWindowResultsFromUIElementProperties --|> taskt.Core.Automation.Commands.WindowGroup.IFromWindowNameResultsProperties
taskt.Core.Automation.Commands.ScriptCommand ..|> taskt.Core.Automation.Commands.IUIParameterProperties
taskt.Core.Automation.Commands.ScriptCommand ..|> taskt.Core.Automation.Commands.ICommandIDProperties
taskt.Core.Automation.Commands.WindowGroup.IFromWindowNameResultsProperties --|> taskt.Core.Automation.Commands.WindowGroup.IFromWindowHandleResultsProperties
taskt.Core.Automation.Commands.WindowGroup.IFromWindowHandleResultsProperties --|> taskt.Core.Automation.Commands.IExpandableProperties
@enduml